# timeSynchronization

./: CMakeLists.txt  README.md
include/timeSynchronization/: timeSynchronizer.h
test/: CMakeLists.txt  timeSynchronizationTest.cpp
